// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`MFT entrypoint query 1`] = `
{
  "trackables": {
    "__typename": "TrackableConnection",
    "edges": [
      {
        "__typename": "TrackableEdge",
        "node": {
          "__typename": "Location",
          "name": {
            "__typename": "Name",
            "value": "Mixing Line",
          },
          "timeZone": "GMT",
          "tracking": {
            "edges": [
              {
                "node": {
                  "displayName": {
                    "name": {
                      "value": "Run",
                    },
                  },
                  "fsm": {
                    "active": {
                      "assignees": {
                        "edges": [
                          {
                            "node": {
                              "assignedTo": null,
                            },
                          },
                        ],
                      },
                      "displayName": {
                        "name": {
                          "value": "Run",
                        },
                      },
                      "fields": {
                        "edges": [
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Override Start Time",
                                },
                              },
                              "value": {
                                "__typename": "TimestampValue",
                                "timestamp": null,
                              },
                              "valueType": "timestamp",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Override End Time",
                                },
                              },
                              "value": {
                                "__typename": "TimestampValue",
                                "timestamp": null,
                              },
                              "valueType": "timestamp",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Run Output",
                                },
                              },
                              "value": {
                                "__typename": "NumberValue",
                              },
                              "valueType": "number",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Reject Count",
                                },
                              },
                              "value": {
                                "__typename": "NumberValue",
                              },
                              "valueType": "number",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Comments",
                                },
                              },
                              "value": {
                                "__typename": "StringValue",
                                "string": null,
                              },
                              "valueType": "string",
                            },
                          },
                        ],
                      },
                      "state": {
                        "__typename": "Open",
                      },
                    },
                    "transitions": {
                      "edges": [],
                    },
                  },
                },
              },
            ],
          },
        },
      },
      {
        "__typename": "TrackableEdge",
        "node": {
          "__typename": "Location",
          "name": {
            "__typename": "Name",
            "value": "Fill Line",
          },
          "timeZone": "GMT",
          "tracking": {
            "edges": [
              {
                "node": {
                  "displayName": {
                    "name": {
                      "value": "Run",
                    },
                  },
                  "fsm": {
                    "active": {
                      "assignees": {
                        "edges": [
                          {
                            "node": {
                              "assignedTo": null,
                            },
                          },
                        ],
                      },
                      "displayName": {
                        "name": {
                          "value": "Run",
                        },
                      },
                      "fields": {
                        "edges": [
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Override Start Time",
                                },
                              },
                              "value": {
                                "__typename": "TimestampValue",
                                "timestamp": null,
                              },
                              "valueType": "timestamp",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Override End Time",
                                },
                              },
                              "value": {
                                "__typename": "TimestampValue",
                                "timestamp": null,
                              },
                              "valueType": "timestamp",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Run Output",
                                },
                              },
                              "value": {
                                "__typename": "NumberValue",
                              },
                              "valueType": "number",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Reject Count",
                                },
                              },
                              "value": {
                                "__typename": "NumberValue",
                              },
                              "valueType": "number",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Comments",
                                },
                              },
                              "value": {
                                "__typename": "StringValue",
                                "string": null,
                              },
                              "valueType": "string",
                            },
                          },
                        ],
                      },
                      "state": {
                        "__typename": "Open",
                      },
                    },
                    "transitions": {
                      "edges": [],
                    },
                  },
                },
              },
            ],
          },
        },
      },
      {
        "__typename": "TrackableEdge",
        "node": {
          "__typename": "Location",
          "name": {
            "__typename": "Name",
            "value": "Assembly Line",
          },
          "timeZone": "GMT",
          "tracking": {
            "edges": [
              {
                "node": {
                  "displayName": {
                    "name": {
                      "value": "Run",
                    },
                  },
                  "fsm": {
                    "active": {
                      "assignees": {
                        "edges": [
                          {
                            "node": {
                              "assignedTo": null,
                            },
                          },
                        ],
                      },
                      "displayName": {
                        "name": {
                          "value": "Run",
                        },
                      },
                      "fields": {
                        "edges": [
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Override Start Time",
                                },
                              },
                              "value": {
                                "__typename": "TimestampValue",
                                "timestamp": null,
                              },
                              "valueType": "timestamp",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Override End Time",
                                },
                              },
                              "value": {
                                "__typename": "TimestampValue",
                                "timestamp": null,
                              },
                              "valueType": "timestamp",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Run Output",
                                },
                              },
                              "value": {
                                "__typename": "NumberValue",
                              },
                              "valueType": "number",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Reject Count",
                                },
                              },
                              "value": {
                                "__typename": "NumberValue",
                              },
                              "valueType": "number",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Comments",
                                },
                              },
                              "value": {
                                "__typename": "StringValue",
                                "string": null,
                              },
                              "valueType": "string",
                            },
                          },
                        ],
                      },
                      "state": {
                        "__typename": "Open",
                      },
                    },
                    "transitions": {
                      "edges": [],
                    },
                  },
                },
              },
            ],
          },
        },
      },
      {
        "__typename": "TrackableEdge",
        "node": {
          "__typename": "Location",
          "name": {
            "__typename": "Name",
            "value": "Cartoning Line",
          },
          "timeZone": "GMT",
          "tracking": {
            "edges": [
              {
                "node": {
                  "displayName": {
                    "name": {
                      "value": "Run",
                    },
                  },
                  "fsm": {
                    "active": {
                      "assignees": {
                        "edges": [
                          {
                            "node": {
                              "assignedTo": null,
                            },
                          },
                        ],
                      },
                      "displayName": {
                        "name": {
                          "value": "Run",
                        },
                      },
                      "fields": {
                        "edges": [
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Override Start Time",
                                },
                              },
                              "value": {
                                "__typename": "TimestampValue",
                                "timestamp": null,
                              },
                              "valueType": "timestamp",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Override End Time",
                                },
                              },
                              "value": {
                                "__typename": "TimestampValue",
                                "timestamp": null,
                              },
                              "valueType": "timestamp",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Run Output",
                                },
                              },
                              "value": {
                                "__typename": "NumberValue",
                              },
                              "valueType": "number",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Reject Count",
                                },
                              },
                              "value": {
                                "__typename": "NumberValue",
                              },
                              "valueType": "number",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Comments",
                                },
                              },
                              "value": {
                                "__typename": "StringValue",
                                "string": null,
                              },
                              "valueType": "string",
                            },
                          },
                        ],
                      },
                      "state": {
                        "__typename": "Open",
                      },
                    },
                    "transitions": {
                      "edges": [],
                    },
                  },
                },
              },
            ],
          },
        },
      },
      {
        "__typename": "TrackableEdge",
        "node": {
          "__typename": "Location",
          "name": {
            "__typename": "Name",
            "value": "Packaging Line",
          },
          "timeZone": "GMT",
          "tracking": {
            "edges": [
              {
                "node": {
                  "displayName": {
                    "name": {
                      "value": "Run",
                    },
                  },
                  "fsm": {
                    "active": {
                      "assignees": {
                        "edges": [
                          {
                            "node": {
                              "assignedTo": null,
                            },
                          },
                        ],
                      },
                      "displayName": {
                        "name": {
                          "value": "Run",
                        },
                      },
                      "fields": {
                        "edges": [
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Override Start Time",
                                },
                              },
                              "value": {
                                "__typename": "TimestampValue",
                                "timestamp": null,
                              },
                              "valueType": "timestamp",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Override End Time",
                                },
                              },
                              "value": {
                                "__typename": "TimestampValue",
                                "timestamp": null,
                              },
                              "valueType": "timestamp",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Run Output",
                                },
                              },
                              "value": {
                                "__typename": "NumberValue",
                              },
                              "valueType": "number",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Reject Count",
                                },
                              },
                              "value": {
                                "__typename": "NumberValue",
                              },
                              "valueType": "number",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Comments",
                                },
                              },
                              "value": {
                                "__typename": "StringValue",
                                "string": null,
                              },
                              "valueType": "string",
                            },
                          },
                        ],
                      },
                      "state": {
                        "__typename": "Open",
                      },
                    },
                    "transitions": {
                      "edges": [],
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "totalCount": 5,
  },
}
`;

exports[`MFT start run 1`] = `
{
  "advance": {
    "__typename": "AdvanceResult",
    "fsm": {
      "__typename": "Task",
      "fsm": {
        "__typename": "TaskStateMachine",
        "active": {
          "assignees": {
            "edges": [
              {
                "node": {
                  "assignedTo": {
                    "displayName": "Will Ruggiano",
                  },
                },
              },
            ],
          },
          "displayName": {
            "name": {
              "value": "Run",
            },
          },
          "fields": {
            "edges": [
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override Start Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": "2024-09-08T19:31:45.364+00:00",
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override End Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Run Output",
                    },
                  },
                  "value": {
                    "__typename": "NumberValue",
                  },
                  "valueType": "number",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Reject Count",
                    },
                  },
                  "value": {
                    "__typename": "NumberValue",
                  },
                  "valueType": "number",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Comments",
                    },
                  },
                  "value": {
                    "__typename": "StringValue",
                    "string": null,
                  },
                  "valueType": "string",
                },
              },
            ],
          },
          "state": {
            "__typename": "InProgress",
            "inProgressBy": {
              "displayName": "Will Ruggiano",
            },
          },
        },
        "transitions": {
          "edges": [
            {
              "node": {
                "displayName": {
                  "name": {
                    "value": "Downtime",
                  },
                },
                "fields": {
                  "edges": [
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override State Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override End Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Description",
                          },
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                  ],
                },
              },
            },
            {
              "node": {
                "displayName": {
                  "name": {
                    "value": "Idle Time",
                  },
                },
                "fields": {
                  "edges": [
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override State Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override End Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Description",
                          },
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                  ],
                },
              },
            },
          ],
        },
      },
    },
    "instantiations": [
      {
        "__typename": "TaskEdge",
        "node": {
          "__typename": "Task",
          "displayName": {
            "__typename": "DisplayName",
            "name": {
              "__typename": "DynamicString",
              "value": "Run",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`MFT production -> idle time 1`] = `
{
  "advance": {
    "__typename": "AdvanceResult",
    "fsm": {
      "__typename": "Task",
      "fsm": {
        "__typename": "TaskStateMachine",
        "active": {
          "assignees": {
            "edges": [
              {
                "node": {
                  "assignedTo": {
                    "displayName": "Will Ruggiano",
                  },
                },
              },
            ],
          },
          "displayName": {
            "name": {
              "value": "Idle Time",
            },
          },
          "fields": {
            "edges": [
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override State Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override End Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Description",
                    },
                  },
                  "value": {
                    "__typename": "StringValue",
                    "string": null,
                  },
                  "valueType": "string",
                },
              },
            ],
          },
          "state": {
            "__typename": "InProgress",
            "inProgressBy": {
              "displayName": "Will Ruggiano",
            },
          },
        },
        "transitions": {
          "edges": [],
        },
      },
    },
    "instantiations": [],
  },
}
`;

exports[`MFT end idle time 1`] = `
{
  "advance": {
    "__typename": "AdvanceResult",
    "fsm": {
      "__typename": "Task",
      "fsm": {
        "__typename": "TaskStateMachine",
        "active": {
          "assignees": {
            "edges": [
              {
                "node": {
                  "assignedTo": {
                    "displayName": "Will Ruggiano",
                  },
                },
              },
            ],
          },
          "displayName": {
            "name": {
              "value": "Run",
            },
          },
          "fields": {
            "edges": [
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override Start Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": "2024-09-08T19:31:45.364+00:00",
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override End Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Run Output",
                    },
                  },
                  "value": {
                    "__typename": "NumberValue",
                  },
                  "valueType": "number",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Reject Count",
                    },
                  },
                  "value": {
                    "__typename": "NumberValue",
                  },
                  "valueType": "number",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Comments",
                    },
                  },
                  "value": {
                    "__typename": "StringValue",
                    "string": null,
                  },
                  "valueType": "string",
                },
              },
            ],
          },
          "state": {
            "__typename": "InProgress",
            "inProgressBy": {
              "displayName": "Will Ruggiano",
            },
          },
        },
        "transitions": {
          "edges": [
            {
              "node": {
                "displayName": {
                  "name": {
                    "value": "Downtime",
                  },
                },
                "fields": {
                  "edges": [
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override State Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override End Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Description",
                          },
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                  ],
                },
              },
            },
            {
              "node": {
                "displayName": {
                  "name": {
                    "value": "Idle Time",
                  },
                },
                "fields": {
                  "edges": [
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override State Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override End Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Description",
                          },
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                  ],
                },
              },
            },
          ],
        },
      },
    },
    "instantiations": [],
  },
}
`;

exports[`MFT production -> downtime 1`] = `
{
  "advance": {
    "__typename": "AdvanceResult",
    "fsm": {
      "__typename": "Task",
      "fsm": {
        "__typename": "TaskStateMachine",
        "active": {
          "assignees": {
            "edges": [
              {
                "node": {
                  "assignedTo": {
                    "displayName": "Will Ruggiano",
                  },
                },
              },
            ],
          },
          "displayName": {
            "name": {
              "value": "Downtime",
            },
          },
          "fields": {
            "edges": [
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override State Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override End Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Description",
                    },
                  },
                  "value": {
                    "__typename": "StringValue",
                    "string": null,
                  },
                  "valueType": "string",
                },
              },
            ],
          },
          "state": {
            "__typename": "InProgress",
            "inProgressBy": {
              "displayName": "Will Ruggiano",
            },
          },
        },
        "transitions": {
          "edges": [],
        },
      },
    },
    "instantiations": [],
  },
}
`;

exports[`MFT end downtime 1`] = `
{
  "advance": {
    "__typename": "AdvanceResult",
    "fsm": {
      "__typename": "Task",
      "fsm": {
        "__typename": "TaskStateMachine",
        "active": {
          "assignees": {
            "edges": [
              {
                "node": {
                  "assignedTo": {
                    "displayName": "Will Ruggiano",
                  },
                },
              },
            ],
          },
          "displayName": {
            "name": {
              "value": "Run",
            },
          },
          "fields": {
            "edges": [
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override Start Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": "2024-09-08T19:31:45.364+00:00",
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override End Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Run Output",
                    },
                  },
                  "value": {
                    "__typename": "NumberValue",
                  },
                  "valueType": "number",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Reject Count",
                    },
                  },
                  "value": {
                    "__typename": "NumberValue",
                  },
                  "valueType": "number",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Comments",
                    },
                  },
                  "value": {
                    "__typename": "StringValue",
                    "string": null,
                  },
                  "valueType": "string",
                },
              },
            ],
          },
          "state": {
            "__typename": "InProgress",
            "inProgressBy": {
              "displayName": "Will Ruggiano",
            },
          },
        },
        "transitions": {
          "edges": [
            {
              "node": {
                "displayName": {
                  "name": {
                    "value": "Downtime",
                  },
                },
                "fields": {
                  "edges": [
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override State Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override End Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Description",
                          },
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                  ],
                },
              },
            },
            {
              "node": {
                "displayName": {
                  "name": {
                    "value": "Idle Time",
                  },
                },
                "fields": {
                  "edges": [
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override State Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override End Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Description",
                          },
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                  ],
                },
              },
            },
          ],
        },
      },
    },
    "instantiations": [],
  },
}
`;

exports[`MFT end run 1`] = `
{
  "advance": {
    "__typename": "AdvanceResult",
    "fsm": {
      "__typename": "Task",
      "chain": {
        "__typename": "TaskConnection",
        "edges": [
          {
            "__typename": "TaskEdge",
            "node": {
              "__typename": "Task",
              "displayName": {
                "__typename": "DisplayName",
                "name": {
                  "__typename": "DynamicString",
                  "value": "Run",
                },
              },
              "state": {
                "__typename": "Closed",
              },
            },
          },
          {
            "__typename": "TaskEdge",
            "node": {
              "__typename": "Task",
              "displayName": {
                "__typename": "DisplayName",
                "name": {
                  "__typename": "DynamicString",
                  "value": "Idle Time",
                },
              },
              "state": {
                "__typename": "Closed",
              },
            },
          },
          {
            "__typename": "TaskEdge",
            "node": {
              "__typename": "Task",
              "displayName": {
                "__typename": "DisplayName",
                "name": {
                  "__typename": "DynamicString",
                  "value": "Downtime",
                },
              },
              "state": {
                "__typename": "Closed",
              },
            },
          },
          {
            "__typename": "TaskEdge",
            "node": {
              "__typename": "Task",
              "displayName": {
                "__typename": "DisplayName",
                "name": {
                  "__typename": "DynamicString",
                  "value": "Idle Time",
                },
              },
              "state": {
                "__typename": "Closed",
              },
            },
          },
        ],
      },
      "fsm": null,
    },
    "instantiations": [],
  },
}
`;

exports[`MFT apply field edits retroactively 1`] = `
{
  "applyFieldEdits": {
    "__typename": "Task",
    "fields": {
      "__typename": "FieldConnection",
      "edges": [
        {
          "__typename": "FieldEdge",
          "node": {
            "__typename": "Field",
            "name": {
              "__typename": "DisplayName",
              "name": {
                "__typename": "DynamicString",
                "value": "Override Start Time",
              },
            },
            "value": {
              "__typename": "TimestampValue",
              "timestamp": null,
            },
            "valueType": "timestamp",
          },
        },
        {
          "__typename": "FieldEdge",
          "node": {
            "__typename": "Field",
            "name": {
              "__typename": "DisplayName",
              "name": {
                "__typename": "DynamicString",
                "value": "Override End Time",
              },
            },
            "value": {
              "__typename": "TimestampValue",
              "timestamp": null,
            },
            "valueType": "timestamp",
          },
        },
        {
          "__typename": "FieldEdge",
          "node": {
            "__typename": "Field",
            "name": {
              "__typename": "DisplayName",
              "name": {
                "__typename": "DynamicString",
                "value": "Run Output",
              },
            },
            "value": {
              "__typename": "NumberValue",
            },
            "valueType": "number",
          },
        },
        {
          "__typename": "FieldEdge",
          "node": {
            "__typename": "Field",
            "name": {
              "__typename": "DisplayName",
              "name": {
                "__typename": "DynamicString",
                "value": "Reject Count",
              },
            },
            "value": {
              "__typename": "NumberValue",
            },
            "valueType": "number",
          },
        },
        {
          "__typename": "FieldEdge",
          "node": {
            "__typename": "Field",
            "name": {
              "__typename": "DisplayName",
              "name": {
                "__typename": "DynamicString",
                "value": "Comments",
              },
            },
            "value": {
              "__typename": "StringValue",
              "string": "Don't mind me! Just leaving a comment :)",
            },
            "valueType": "string",
          },
        },
      ],
    },
  },
}
`;

exports[`MFT history query 1`] = `
{
  "trackables": {
    "__typename": "TrackableConnection",
    "edges": [
      {
        "__typename": "TrackableEdge",
        "node": {
          "__typename": "Task",
          "displayName": {
            "__typename": "DisplayName",
            "name": {
              "__typename": "DynamicString",
              "value": "Run",
            },
          },
          "state": {
            "__typename": "Closed",
            "closedBy": {
              "__typename": "Worker",
              "displayName": "Will Ruggiano",
            },
          },
          "tracking": null,
        },
      },
    ],
    "totalCount": 1,
  },
}
`;
